--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "babel-node src",
     "test": "eslint src && flow && jest --coverage",
     "precommit": "yarn test",
-    "prepush": "yarn test"
+    "prepush": "yarn test",
+    "prod:build": "rimraf lib && babel src -d lib --ignore .test.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-react": "^7.4.0",
     "flow-bin": "^0.59.0",
     "husky": "^0.14.3",
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "rimraf": "^2.6.2"
   }
 }
