--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
