--- a/package.json
+++ b/package.json
@@ -28,18 +28,22 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.1",
+    "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "flow-bin": "^0.59.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "nodemon": "^1.12.1",
     "pm2": "^2.8.0",
+    "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.5"
   },
@@ -49,12 +53,16 @@
     "express": "^4.16.2",
     "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
+    "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "semantic-ui-react": "^0.77.0",
+    "semantic-ui-sass": "^2.2.11"
   }
 }
