--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
     "prod:stop": "pm2 delete server",
     "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
-    "test": "yarn lint && flow && jest --coverage",
-    "precommit": "yarn test",
-    "prepush": "yarn test && yarn prod:build"
+    "test": "yarn lint && flow && jest --coverage"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -36,14 +34,15 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "flow-bin": "^0.59.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "nodemon": "^1.12.1",
     "pm2": "^2.8.0",
-    "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.5"
   },
@@ -62,7 +61,7 @@
     "redux-actions": "^2.2.1",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "semantic-ui-react": "^0.77.0",
-    "semantic-ui-sass": "^2.2.11"
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.77.0"
   }
 }
