--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.16.2",
     "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
