--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "webpack-dev-server": "^2.9.5"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
@@ -60,6 +63,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "redux-api-middleware": "^2.0.1",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "semantic-ui-css": "^2.2.12",
